fix citations who did what in gwas - pt 24 nat ex

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -83,7 +83,7 @@ As has been previously mentioned (sections \@ref(goutMetSyn), \@ref(chap4Intro))
 
 ### Use of selection statistics to inform GWAS
 
-\gls{gwas} in the last few years have utilised larger and larger cohorts, in a quest to discover the source of 'missing heritability' [@Visscher2012;@Yang2017]. The requirement for larger cohorts comes from the inverse relationship between effect-size and statistical power. The source of missing heritability is thought to be found in the polygenic effects of many small effect genetic variants and unmarked uncommon variants of stronger effect sizes [@Spencer2009]. \gls{gwas} also suffer from the need to control the false positive rate and as such have a stringent significance threshold for association [@Fadista2016]. One of the side-effects of this threshold is that variants that have a true effect but due to cohort size do not reach statistical significance are lost in the 'noise' of the \gls{gwas} signal. One of the possibilities to be able to identify such variants is to use a combination of of selection statistics with \gls{gwas} to prioritise \gls{gwas} results [@Ayodo2007, @Field2016a, @Casto2011].
+\gls{gwas} in the last few years have utilised larger and larger cohorts, in a quest to discover the source of 'missing heritability' [@Visscher2012; @Yang2017]. The requirement for larger cohorts comes from the inverse relationship between effect-size and statistical power. The source of missing heritability is thought to be found in the polygenic effects of many small effect genetic variants and unmarked uncommon variants of stronger effect sizes [@Spencer2009]. \gls{gwas} also suffer from the need to control the false positive rate and as such have a stringent significance threshold for association [@Fadista2016]. One of the side-effects of this threshold is that variants that have a true effect but due to cohort size do not reach statistical significance are lost in the 'noise' of the \gls{gwas} signal. One of the possibilities to be able to identify such variants is to use a combination of of selection statistics with \gls{gwas} to prioritise \gls{gwas} results [@Ayodo2007; @Field2016a; @Casto2011].
 
 <!-- >Selection reduces the genetic variation at a locus and increases the \gls{ld} between the selected variant and variants carried with it as part of the haplotype. This can increase the \gls{ld} between a causal variant  and with a tag \gls{snp}. -->
 
@@ -203,7 +203,7 @@ poly_phenos <- read_delim('~/data/PolyGwas/coreEx_phenos021216.txt', delim = '\t
 ```
 
 
-The \gls{gwas} was performed for gout using individuals with Polynesian ancestry. Gout affection was determined by the \gls{acr} criteria [@Wallace1977a], or a doctor diagnosis, or if enrolled in a gout drug trial. All participants were older than 18, and provided informed written consent. Exclusion criteria included unknown gout affection status, non-Polynesian self-reported ancestry, or a mismatch between self-reported ancestry and \gls{pca} clustering. The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina and used in @Guo2014). Markers were removed if the minor allele frequency was less than 0.01, or had a \gls{hwe} chi-squared exact test P < 1x10^-6^. The \gls{gwas} was conducted by Dr Tanya Major (Merriman Lab) using Plink v1.9b32.
+The \gls{gwas} for gout using individuals with Polynesian ancestry was conducted by Dr Tanya Major (Merriman Lab) using Plink v1.9b32. Gout affection was determined by the \gls{acr} criteria [@Wallace1977a], or a doctor diagnosis, or if enrolled in a gout drug trial. All participants were older than 18, and provided informed written consent. Exclusion criteria included unknown gout affection status, non-Polynesian self-reported ancestry, or a mismatch between self-reported ancestry and \gls{pca} clustering. The \gls{gwas} was adjusted for age, sex, and the first ten \glspl{pc} calculated from 2,858 ancestry informative markers (as identified by Illumina and used in @Guo2014). Markers were removed if the minor allele frequency was less than 0.01, or had a \gls{hwe} chi-squared exact test P < 1x10^-6^.
 
 
 <!-- polynesian_gout-affection.pheno -->
