citation for causal statement - pt 4 minor int ex

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -65,7 +65,7 @@ The benefits of urate include the its ability to increase blood pressure and it 
 <!-- ?? The fructose response for leads to insulin desensitivity @Johnston2007? -->
 <!--     - fructose blocks glyconeogeneis -> increased glycogen storage -->
 
-An increased level of urate in the blood is called \gls{hu} and is causal of gout. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with \gls{hu} being a prerequisite for the formation of these crystals [@Merriman2011a].
+An increased level of urate in the blood is called \gls{hu} and is causal of gout [@choi_pathogenesis_2005]. The prevalence of \gls{hu} in Polynesian populations is higher than many other populations [@Gosling2014], and co-morbid with it are higher prevalences of the co-morbidities of gout, diabetes, obesity, dyslipidaemia, kidney disease, and \gls{cvd} [@Winnard2013]. In New Zealand, gout prevalence is ~3.1%, however, prevalence in M\tex{\={a}}ori and Pacific peoples is 6-8% with 40% of individuals with gout also having diabetes or \gls{cvd} [@Winnard2013]. Gout is an immune response to the monosodium urate crystals that are formed from the precipitation of urate from the blood, with \gls{hu} being a prerequisite for the formation of these crystals [@Merriman2011a].
 
 <!-- \Gls{hu} in the Pacific is seen in Eastern and Western Polynesia, but the prevalence in the ancestral populations of Near and Remote Oceania is reduced. However, Taiwanese aboriginals also have the higher prevalence of \gls{hu} [@Gosling2014]. -->
 
