include p values in pathway table
reword first 2 sentences regarding presence of malaria in polynesia

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -1029,13 +1029,13 @@ Pathway enrichment analysis was performed for each intra-population statistic se
 
 ```{r keggPath, results = 'asis'}
 kegg_sig %>% 
-  filter(Adjusted.P.value < 0.05) %>% mutate(stat2 = paste0(case_when(stat == "ihs" ~ 'iHS', stat == 'nsl' ~ "nSL", stat == 'td'~ '\\gls{td}', stat == 'flf' ~ '\\gls{flf}', TRUE ~ stat), ' (',Overlap,')')) %>% 
+  filter(Adjusted.P.value < 0.05) %>% mutate(stat2 = paste0(case_when(stat == "ihs" ~ 'iHS', stat == 'nsl' ~ "nSL", stat == 'td'~ '\\gls{td}', stat == 'flf' ~ '\\gls{flf}', TRUE ~ stat), ' (',Overlap,') P = ', purrr::map_chr(Adjusted.P.value, ~phdFunctions::format_p_ke(., format = 'latex', bold = FALSE, escape = FALSE)))) %>% 
   select(Term, pop ,stat, stat2) %>%
   mutate(pop = toupper(pop)) %>% 
   distinct() %>% spread(stat, stat2, "") %>% unite(col = "Overlap", c("td", "flf","ihs", "nsl")) %>% spread(pop, Overlap, "") %>% mutate_at(c("CIM", "NZM","SAM","TON"), funs(stringr::str_replace(.,pattern = '_+', replacement = "" ))) %>% mutate_at(c("CIM", "NZM","SAM","TON"), funs(stringr::str_replace(.,pattern = '_+$', replacement = "" ))) %>% mutate_at(c("CIM", "NZM","SAM","TON"), funs(stringr::str_replace(.,pattern = '_', replacement = ", " ))) %>% 
   mutate(term2 = sapply(Term, function(x){strsplit(x, "_")[[1]][1]})) %>% select(-Term) %>% 
   select( term2, everything()) %>% 
-  kable(., col.names = c("Pathway Term","CIM","NZM","SAM", "TON"), format = 'latex', booktabs = TRUE, caption = '(\\#tab:keggPath) Pathway terms that were significant after multiple-testing adjustment in Polynesian populations in Enrichr KEGG 2016 pathway enrichment analysis.', longtable = FALSE, linesep = "", escape = FALSE) %>% add_header_above(., c("", "Population" = 4)) %>% kable_styling(., latex_options = 'scale_down', font_size = 10) %>% footnote(general = "Statistic the pathway enrichment was significant for is provided. Numbers in parentheses are number of genes present and the total number of genes in the pathway.", general_title = "", threeparttable = TRUE) 
+  kable(., col.names = c("Pathway Term","CIM","NZM","SAM", "TON"), format = 'latex', booktabs = TRUE, caption = '(\\#tab:keggPath) Pathway terms that were significant after multiple-testing adjustment in Polynesian populations in Enrichr KEGG 2016 pathway enrichment analysis.', longtable = FALSE, linesep = "", escape = FALSE) %>% add_header_above(., c("", "Population" = 4)) %>% kable_styling(., latex_options = 'scale_down', font_size = 10) %>% footnote(general = "Statistic the pathway enrichment was significant for is provided. Numbers in parentheses are number of genes present and the total number of genes in the pathway. P values are adjusted for multiple-testing.", general_title = "", threeparttable = TRUE) %>% kableExtra::landscape()
 ```
 
 
@@ -1069,7 +1069,7 @@ p <- panel %>% select(pop) %>% distinct() %>% pull(pop)
 
 n_shared_haplo <- map(poly_pop, function(x){map2(x, p, ~ join_ihs_nsl(.x, .y)) %>% bind_rows()}) %>% bind_rows()
 
-inner_join(n_shared_haplo %>% select(p1, p2, ihs) %>% spread(p1, ihs), n_shared_haplo %>% select(p1, p2, nsl) %>% spread(p1, nsl), by = 'p2', suffix = c('_ihs', '_nsl')) %>% left_join(., panel %>% select(p2 = pop, super_pop) %>% distinct(), by = 'p2') %>% arrange(super_pop) %>% select(-super_pop) %>% kable(., col.names = c("Population",rep(c("CIM","NZM","SAM","TON"),2)), format = 'latex', booktabs = TRUE, caption = '(\\#tab:nSharedHaplo) Number of significant SNPs that were in common between populations.') %>% kableExtra::add_header_above(., c("", "iHS" = 4,"nSL" =4)) %>% kableExtra::group_rows("AFR", 1, 7) %>% 
+inner_join(n_shared_haplo %>% select(p1, p2, ihs) %>% spread(p1, ihs), n_shared_haplo %>% select(p1, p2, nsl) %>% spread(p1, nsl), by = 'p2', suffix = c('_ihs', '_nsl')) %>% left_join(., panel %>% select(p2 = pop, super_pop) %>% distinct(), by = 'p2') %>% arrange(super_pop) %>% select(-super_pop) %>% kable(., col.names = c("Population",rep(c("CIM","NZM","SAM","TON"),2)), format = 'latex', booktabs = TRUE, caption = '(\\#tab:nSharedHaplo) Number of significant SNPs that were in common between populations.') %>% kable_styling(font_size = 6) %>% kableExtra::add_header_above(., c("", "iHS" = 4,"nSL" =4)) %>% kableExtra::group_rows("AFR", 1, 7) %>% 
   kableExtra::group_rows("AMR", 8, 11) %>% 
   kableExtra::group_rows("EAS", 12, 16) %>% 
   kableExtra::group_rows("EUR", 17, 22) %>% 
@@ -3173,7 +3173,7 @@ No selection signal was observed at _CREBRF_ in any of the Polynesian population
 
 The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling were the main results for the Polynesian populations, rather than metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
 
-As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the Pacific, where starvation during long voyages selected for thrifty-genes, does not fit with the anthropological history of Polynesian people, where they undertook planned voyages with settled the Pacific in a speedy manner. From the analysis results in this chapter, the thrifty-gene hypothesis appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
+As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the Pacific, where starvation during long voyages selected for thrifty-genes, does not fit with the anthropological history of Polynesian people, where they undertook planned voyages which settled the Pacific in a speedy manner. From the analysis results in this chapter, the thrifty-gene hypothesis appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
 
 
 
@@ -3193,7 +3193,7 @@ As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the 
 ### Selection in malaria associated loci in Polynesian populations
 
 
-Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, but is absent and always had been absent, further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacific [@Clark1993]. In Polynesia, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though generally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
+Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, with evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania [@Clark1993]. Malaria is absent, and always has been further west into Polynesia, Polynesian ancestors would have passed through Near Oceania prior to settlement of the Pacific [@Clark1993]. In Polynesia, even though malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though generally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
 
 Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
 
